@@ -1,5 +1,6 @@
 Version 2.02.39 -
 ================================
+  Add --force to lvextend and lvresize.
   Fix vgchange to not activate mirror leg and log volumes directly.
   Fix test directory clean up in make distclean.
  
